# usbguard

./: .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CHANGELOG.md  Makefile.am  NOTES.md  README.adoc  README.md  RELEASE_PROCESS.md  ROADMAP.md  autogen.sh  configure.ac  libusbguard.pc.in  usbguard-daemon.conf  usbguard-daemon.conf.in  usbguard-tmpfiles.conf  usbguard.service  usbguard.service.in  usbguard.spec
src/: .gitignore  Makefile.am  astylerc  build-config.h.in  test_filesystem.cpp
src/CLI/: CLI.hpp  CLIArgv_Lexer-configuration.hpp  CLIArgv_Lexer-token.hpp  CLIArgv_Lexer-token_ids.hpp  CLIArgv_Lexer.cpp  CLIArgv_Lexer.hpp  CLIArgv_Lexer.qx  CLICommand.cpp  CLICommand.hpp  CLILine_Lexer-configuration.hpp  CLILine_Lexer-token.hpp  CLILine_Lexer-token_ids.hpp  CLILine_Lexer.cpp  CLILine_Lexer.hpp  CLILine_Lexer.qx  CLIParser.c  CLIParser.h  CLIParser.y  DeviceSetPolicy.cpp  DeviceSetPolicy.hpp  IPCSignalWatcher.cpp  IPCSignalWatcher.hpp  PolicyGenerator.cpp  PolicyGenerator.hpp  README.md  RuleAppend.cpp  RuleAppend.hpp  usbguard-add-user.cpp  usbguard-add-user.hpp  usbguard-allow-device.cpp  usbguard-allow-device.hpp  usbguard-append-rule.cpp  usbguard-append-rule.hpp  usbguard-apply-device-policy.cpp  usbguard-apply-device-policy.hpp  usbguard-block-device.cpp  usbguard-block-device.hpp  usbguard-device-list.cpp  usbguard-device-list.hpp  usbguard-generate-policy.cpp  (+24 more)
src/Common/: ByteOrder.hpp  CCBQueue.hpp  FDInputStream.hpp  Format.hpp  IPC.cpp  IPC.hpp  IPCClient.cpp  IPCClient.hpp  JSON.hpp  LDAPUtil.cpp  LDAPUtil.hpp  Logging.cpp  Logging.hpp  SysIO.hpp  Thread.hpp  Types.hpp  Utility.cpp  Utility.hpp
src/DBus/: .gitignore  DBusBridge.cpp  DBusBridge.hpp  DBusInterface.xml  README.adoc  gdbus-server.cpp  generate-documentation.sh  org.usbguard.conf  org.usbguard.policy  org.usbguard.service.in  org.usbguard1.conf  org.usbguard1.policy  org.usbguard1.service.in  usbguard-dbus.service.in
src/Daemon/: ConfigFile.cpp  ConfigFile.hpp  Daemon.cpp  Daemon.hpp  Device.cpp  Device.hpp  DeviceManager.cpp  DeviceManager.hpp  Exceptions.hpp  FileAuditBackend.cpp  FileAuditBackend.hpp  FileRuleSet.cpp  FileRuleSet.hpp  IPCServer.cpp  IPCServer.hpp  LDAPHandler.cpp  LDAPHandler.hpp  LDAPRuleSet.cpp  LDAPRuleSet.hpp  LinuxAuditBackend.cpp  LinuxAuditBackend.hpp  LinuxDeviceManager.cpp  LinuxDeviceManager.hpp  NSHandler.cpp  NSHandler.hpp  RuleParser.cpp  RuleParser.hpp  RuleSetFactory.cpp  RuleSetFactory.hpp  Seccomp.c  Seccomp.h  SysIO.cpp  SysIO.hpp  UDev.cpp  UDev.hpp  USB.cpp  USB.hpp  USBFirewall.cpp  USBFirewall.hpp  main.cpp
src/Daemon/RuleParser/: Lexer-configuration.hpp  Lexer-token.hpp  Lexer-token_ids.hpp  Lexer.cpp  Lexer.hpp  Lexer.qx  Parser.c  Parser.h  Parser.y
src/Daemon/RuleParser/quex/code_base/: asserts  bom.i  definitions  include-guard-undef  temporary_macros_on
src/Daemon/RuleParser/quex/code_base/analyzer/: Accumulator  Counter.i  Mode.i  asserts  headers
src/Daemon/RuleParser/quex/code_base/analyzer/configuration/: derived  validation
src/Daemon/RuleParser/quex/code_base/analyzer/member/: basic  buffer-access  buffer-access.i  misc.i  mode-handling  navigation  on_indentation.i  token-sending  token-sending-undef.i
src/Daemon/RuleParser/quex/code_base/buffer/: BufferFiller  BufferFiller.i  Buffer_debug  InputPolicy  MemoryPositionMimiker
src/Daemon/RuleParser/quex/code_base/compatibility/win/: msc_stdint.h  (+1 more)
src/Daemon/RuleParser/quex/code_base/converter_helper/: from-utf16  from-utf8  identity
src/Daemon/RuleParser/quex/code_base/token/: TokenPolicy  TokenQueue  TokenQueue.i
src/GUI.Qt/: DeviceDialog.cpp  DeviceDialog.h  DeviceDialog.ui  DeviceModel.cpp  DeviceModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QtApplet.pro  SessionBlocker.cpp  SessionBlocker.h  TRANSLATIONS.md  TargetDelegate.cpp  TargetDelegate.h  main.cpp  usbguard-applet-qt.desktop.in
src/GUI.Qt/backend/: AbstractBackend.h  DBusBackend.cpp  DBusBackend.h
src/GUI.Qt/notifications/: AbstractNotifier.h  DBusNotifier.cpp  DBusNotifier.h
src/GUI.Qt/translations/: cs_CZ.ts  es_AR.ts
src/GUI.Qt5/: DeviceDialog.cpp  DeviceDialog.h  DeviceDialog.ui  DeviceModel.cpp  DeviceModel.h  DeviceTableWidget.cpp  DeviceTableWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  QtApplet.pro  TargetDelegate.cpp  TargetDelegate.h  icon.qrc  main.cpp  usbguard-applet-qt.desktop  usbguard-applet-qt.desktop.in
src/Tests/: .gitignore  Makefile.am  bash-testlib.sh  custom.supp  main.cpp  test-driver
src/Tests/Fuzzers/: Makefile.am  fuzzer-rules.cpp  fuzzer-uevent.cpp  fuzzer-usb-descriptor.cpp
src/Tests/LDAP/: ldap-sanity.sh  ldap.sh  nsswitch.sh  setup.ldif  usbguard-policy.ldif  usbguard.ldif  usbguard.schema
src/Tests/LDAP/Sanity/: ldap-nsswitch.sh
src/Tests/LDAP/UseCase/: ldap-test-1.sh  ldap-test-2.sh  ldap-test-3.sh  ldap-test-4.sh  ldap-test-5.sh
src/Tests/LDAP/ansible/: hosts  playbook.yml
src/Tests/LDAP/ansible/roles/bennojoy.openldap_server/: README.md
src/Tests/Packaging/: files-without-copyright.sh  spell-check.rws  spell-check.sh
src/Tests/Regression/: github-PR209-config-parser.cpp  test_Rule_ghi113.cpp  test_Rule_ghi247.cpp  test_Rule_ghi37.cpp  test_json_locale.cpp
src/Tests/Rules/: test-rules.bad  test-rules.file  test-rules.good  test-rules.sh
src/Tests/Source/: check-driver.sh
src/Tests/Source/CheckScripts/: code-style.sh  copyright.sh  private-with-build-config.sh  public-without-build-config.sh  spell-check.rws  spell-check.sh  vim-modeline.sh
src/Tests/USB/: test-descriptor-parser.sh
src/Tests/USB/data/: 0001.out
src/Tests/Unit/: test_Base64.cpp  test_IPCServer_AccessControl.cpp  test_Rule.cpp  test_RuleAttribute_id.cpp  test_RuleParser.cpp  test_UEvent.cpp  test_UEventParser.cpp  test_UMockdevDeviceDefinition.cpp  test_UMockdevDeviceDefinition.data.hpp  test_Utility.cpp
src/Tests/UseCase/: 000_executable.sh  001_cli_policy.sh  002_cli_devices.sh  003_cli_devices_dummy.sh  003_cli_devices_umockdev.sh  004_daemonize.sh  005_cli_devices_advanced.sh  devices.umockdev
src/Tests/UseCase/DummyDevices/: root.tar.xz
(+102 files in other folders)
